banner content added

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-top: 50px;
 }
 
 .nav-title {
@@ -33,6 +34,7 @@ nav {
 
 nav>ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
@@ -44,5 +46,16 @@ nav a {
     text-decoration: none;
     color: #474747;
     font-size: 20px;
+}
 
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
