--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ nav a {
     padding: 130px;
     border-radius: 10px;
     background-color: #FFF8F3;
-    margin: 130px 230px;
+    margin: 130px 0px;
 }
 
 .section-title {
@@ -95,4 +95,90 @@ nav a {
     text-align: center;
     font-size: 35px;
     font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    margin: 30px 0px;
+}
+
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+}
+
+.info-title {
+    color: #757575;
+}
+
+#do-description {
+    padding: 30px 150px;
+
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background-color: white;
+    border-radius: 5px;
+}
+
+.skill-description {
+    color: #757575;
+    margin-top: 20px;
+}
+
+.skill-title {
+    margin-top: 10px;
+}
+
+.resume-column-title {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 24px;
+}
+
+.resume-item-title {
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+
+.resume-item-description {
+    color: #757575;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.resume-item-institute {
+    color: #757575;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+.main-resume-title{
+    margin-top: 130px;
+    margin-bottom: 113px;
+}
+.btn-cv{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 113px;
 }
