--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ nav a {
     text-align: center;
     font-size: 35px;
     font-weight: 700;
+    margin-bottom: 30px;
 }
 
 .section-description {
@@ -181,4 +182,25 @@ main {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 113px;
+}
+footer{
+    display: flex;
+    padding: 130px 200px;
+    background: #FFF8F3;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.contact input, textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    border: none;
+}
+.social-links a{
+    margin-right: 25px;
+}
+.social-links{
+    margin-top: 30px;
 }
