--- a/style.css
+++ b/style.css
@@ -27,9 +27,18 @@ nav {
     background: #FD6E0A;
     color: white;
     border: none;
-    text-align: center;
     font-size: 20px;
     padding: 18px 35px;
+}
+
+.btn-secondary {
+    border-radius: 5px;
+    color: #FD6E0A;
+    background: none;
+    border: 1px solid #FD6E0A;
+    font-size: 20px;
+    padding: 18px 35px;
+    margin-left: 20px;
 }
 
 nav>ul {
@@ -50,26 +59,30 @@ nav a {
 
 .header {
     background: #FFF8F3;
-    background-image: url(./images/header_bg.png);
+    background-image: url(./images/header_bg.png), url('./images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, left;
 }
 
 .banner {
     padding: 30px 30px 0px 150px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
-.banner .profile-pic {
-    width: 500px;
+.banner-description {
+    margin-bottom: 15px;
 }
 
 .banner-greeting {
     font-size: 45px;
     color: #474747;
     margin-bottom: 0px;
+    margin-top: 185px;
+}
+
+.header-btn {
+    margin-bottom: 15px;
 }
 
 .banner-title {
@@ -161,6 +174,7 @@ main {
     font-size: 25px;
     color: #474747;
     margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 .resume-item-description {
@@ -174,33 +188,41 @@ main {
     margin-top: 0px;
     margin-bottom: 20px;
 }
-.main-resume-title{
+
+.main-resume-title {
     margin-top: 130px;
     margin-bottom: 113px;
 }
-.btn-cv{
+
+.btn-cv {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 113px;
 }
-footer{
+
+footer {
     display: flex;
     padding: 130px 200px;
     background: #FFF8F3;
     gap: 100px;
 }
-.footer-column{
+
+.footer-column {
     width: 50%;
 }
-.contact input, textarea{
+
+.contact input,
+textarea {
     display: block;
     margin-bottom: 25px;
     padding: 18px 35px;
     border: none;
 }
-.social-links a{
+
+.social-links a {
     margin-right: 25px;
 }
-.social-links{
+
+.social-links {
     margin-top: 30px;
 }
