--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ nav a {
     justify-content: space-between;
 }
 
+.profile-pic{
+    width: 600px;
+}
+
 .banner-description {
     margin-bottom: 15px;
 }
