--- a/style.css
+++ b/style.css
@@ -238,11 +238,46 @@ textarea {
     }
 
     footer {
-        display: none;
+        margin: 0px;
+        padding: 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 50px;
     }
 
-    header {
+    .footer-column {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* header {
         display: none;
+    } */
+    .header {
+        background-image: none;
+    }
+    nav{
+        display: none;
+    }
+    .profile-pic{
+        display: none;
+    }
+    .banner{
+        padding: 0px;
+        margin: 0px;
+    }
+    .banner-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .banner-title{
+        font-size: 60px;
+        text-align: center;
     }
 
     .about {
@@ -261,9 +296,15 @@ textarea {
         margin-right: 50px;
         margin-left: 50px;
     }
-    .about{
+
+    .about {
         margin: 0px;
         margin-bottom: 30px;
         padding: 25px;
+    }
+
+    #do-description {
+        padding-right: 75px;
+        padding-left: 90px;
     }
 }
