--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ textarea {
     .banner{
         padding: 0px;
         margin: 0px;
+        padding-bottom: 50px;
     }
     .banner-content{
         display: flex;
@@ -279,7 +280,12 @@ textarea {
         font-size: 60px;
         text-align: center;
     }
-
+    .banner-greeting{
+        margin-top: 50px;
+    }
+    .banner-description{
+        text-align: center;
+    }
     .about {
         margin-top: 0px;
     }
