--- a/style.css
+++ b/style.css
@@ -156,15 +156,16 @@ main {
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
     background-color: white;
     border-radius: 5px;
+    transition: transform 1.5s;
 }
 
 .skill:hover {
     background-color: #FD6E0A;
-    
+    transform: rotate(360deg) scale(1.2);
+
     .skill-description {
         color: black;
     }
-
 }
 
 .skill-description {
