--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ nav {
     font-size: 20px;
     padding: 18px 35px;
     cursor: pointer;
+    border: 1px solid #FD6E0A;
+}
+.btn-primary:hover {
+    border-radius: 5px;
+    background: none;
+    color: #FD6E0A;
+    border: 1px solid #FD6E0A;
+    font-size: 20px;
+    padding: 18px 35px;
+    cursor: pointer;
 }
 
 .btn-secondary {
@@ -42,6 +52,10 @@ nav {
     padding: 18px 35px;
     margin-left: 20px;
     cursor: pointer;
+}
+.btn-secondary:hover {
+    color: #FFF8F3;
+    background: #FD6E0A;
 }
 
 nav>ul {
@@ -221,11 +235,15 @@ footer {
     display: flex;
     padding: 130px 200px;
     background: #FFF8F3;
-    gap: 100px;
+    gap: 150px;
+    align-items: center;
 }
 
 .footer-column {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .contact input,
@@ -351,7 +369,7 @@ textarea {
     }
 }
 
-@media screen and (max-width: 1124px) {
+@media screen and (max-width: 1210px) {
     .about-info-container {
         flex-direction: row;
         gap: 20px;
