--- a/style.css
+++ b/style.css
@@ -35,9 +35,8 @@ nav {
 }
 .btn-primary:hover {
     border-radius: 5px;
-    background: none;
-    color: #FD6E0A;
-    border: 1px solid #FD6E0A;
+    background: #376181;
+    border: 1px solid #376181;
     font-size: 20px;
     padding: 18px 35px;
     cursor: pointer;
@@ -55,7 +54,8 @@ nav {
 }
 .btn-secondary:hover {
     color: #FFF8F3;
-    background: #FD6E0A;
+    background: #376181;
+    border: 1px solid #376181;
 }
 
 nav>ul {
